全面更新示例工程(包括Web和gRPC)